updat to style, fixed overflow

--- a/landingPage_v1/churchlayout/styles/global.css
+++ b/landingPage_v1/churchlayout/styles/global.css
@@ -12,7 +12,6 @@ p {
 }
 
 body {
-
     font-family: Lato;
     font-weight: 700;
     font-style: normal;
@@ -20,4 +19,5 @@ body {
     line-height: 1.8em;
     text-transform: none;
     color: #000;
+    overflow: hidden;
 }
